--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
   "license": "ISC",
   "dependencies": {
     "framework7": "^4.1.0",
+    "framework7-icons": "^2.2.0",
     "framework7-react": "^4.1.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
   "devDependencies": {
+    "ajv": "^6.10.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.1.0",
     "expose-loader": "^0.7.3",
     "html-webpack-plugin": "^2.28.0",
     "path": "^0.12.7",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "style-loader": "^0.23.1",
+    "url-loader": "^0.1.1",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.7.1"
   }
 }
